PR/39874: Geoff C. Wing: For compatibility trim hostname domains in bsd output format when matching host lines.